@@ -1,3 +1,8 @@
+2007-10-19  Mikael Djurfeldt  <mikael@djurfeldt.com>
+
+	* wavegenerator.cc (main): Renamed array_data, linear_index from
+	arraydata, linearindex.
+
 2007-10-18  Örjan Ekeberg  <orjan@nada.kth.se>
 
 	* wavegenerator.cc: Added new miniature application.
